--- a/CCapstone1.ipynb
+++ b/CCapstone1.ipynb
@@ -8,20 +8,46 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "We need to import the libraries used throughout"
+    "# Install packages that are needed uncomment these if needed\n",
+    "#!conda install -c conda-forge geopy\n",
+    "#!conda install -c conda-forge folium\n",
+    "#print('Packages installed')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Libraries imported\n"
+     ]
+    }
+   ],
    "source": [
+    "# Import libraries that are needed\n",
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import requests\n",
+    "from geopy.geocoders import Nominatim\n",
+    "\n",
+    "# libraries for displaying images\n",
+    "from IPython.display import Image \n",
+    "from IPython.core.display import HTML\n",
+    "\n",
+    "# tranforming json file into a pandas dataframe library\n",
+    "from pandas.io.json import json_normalize\n",
+    "import folium # plotting library\n",
+    "\n",
+    "print('Libraries imported')"
    ]
   },
   {
@@ -42,11 +68,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Define Foursquare Credentials and Version"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "CLIENT_ID = 'HIQXJLZ5GJL11URYM4NBBAPYAHZYWZTF2XWN3MM4R2N4ITB4' # Foursquare ID\n",
+    "CLIENT_SECRET = 'DJYBKLGALF0LGKMTD1OXBLIWXYRDBW5W320PYN1VR2005Z3J' # your Foursquare Secret\n",
+    "VERSION = '20180604'\n",
+    "LIMIT = 30\n",
+    "print('Your credentails:')\n",
+    "print('CLIENT_ID: ' + CLIENT_ID)\n",
+    "print('CLIENT_SECRET:' + CLIENT_SECRET)"
+   ]
   }
  ],
  "metadata": {
